<?xml version="1.0"?>
<package format="2">
  <name>launcher</name>
  <version>0.0.0</version>
  <description>The launcher package</description>
  <maintainer email="hafez@cmp22.com">hafez</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gmapping</depend>
  <depend>joy_teleop</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>rqt_robot_steering</depend>
  <depend>joy</depend>
  <depend>controller_manager</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
