<?xml version="1.0"?>
<package format="2">
  <name>gazebo_world_description</name>
  <version>0.0.0</version>
  <description>The gazebo_world_description package</description>

  <maintainer email="yukky.saito@gmail.com">yukihiro saito</maintainer>

  <license>Apache2.0</license>

  <exec_depend>gazebo_ros</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <!-- Note: XML comments do not allow two consecutive dashes -->
    <!-- Therefore replace underscore (_) in __attrib with dash (-) -->

    <!-- Use the follwing command to check the path that gazebo_ros sees: -->
    <!-- rospack plugins __attrib="gazebo_model_path" gazebo_ros -->
    <!-- rospack plugins __attrib="gazebo_media_path" gazebo_ros -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>
</package>
